Issue #10062: Allow building on platforms which do not have sem_timedwait.